--- a/style.css
+++ b/style.css
@@ -17,21 +17,21 @@ body {
     height: 100%;
     min-height:100vh;
     background: linear-gradient(90deg, #d8ea7ba0 0%, rgb(255, 255, 255) 100%);
-    cursor:url('cursor1.png'), auto;
+    cursor:url('cursor1.svg'), auto;
 }
 
 .back{
     height:100vh;
     width: 100vw;
-    background-image: url('eve-1.png');
-    background-position: right center;
+    background-image: url('logo.svg');
+    background-position: right;
     background-repeat: no-repeat;
     background-size:contain;
 }
 
 @media (max-width: 480px) {
     .back{
-        background-image: url('eve-1.png');
+        background-image: url('logo.svg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -51,24 +51,38 @@ header {
 
 .header-container {
     display: grid;
-    grid-template-columns:1fr 10rem 1fr;
-    gap: 14rem;
+    grid-template-columns:0.7fr 10rem 1fr;
+    gap: 8rem;
     max-height:11rem;
     padding: 1rem;
     align-items: center;
     justify-items: center;
 }
 
-@media (max-width: 1300px){
+@media (max-width: 1400px){
     .header-container{
         grid-template-columns: 1fr 10rem 1fr;
-        gap:8rem;
+        gap:6rem;
+    }
+}
+
+@media (max-width: 1300px) {
+    .header-container {
+        grid-template-columns: 1fr 9rem 1fr;
+        gap: 5rem;
+    }
+}
+
+@media (max-width: 1100px) {
+    .header-container {
+        grid-template-columns: 0.2fr 9rem 1fr;
+        gap: 2rem;
     }
 }
 
 @media (max-width: 1000px) {
     .header-container {
-        grid-template-columns: 1fr 9rem 1fr;
+        grid-template-columns: 0.3fr 9rem 1fr;
         gap: 1rem;
     }
 }
@@ -83,7 +97,7 @@ header {
 @media (max-width: 500px) {
     .header-container {
         grid-template-columns: 1fr 0.1rem 1fr;
-        padding-bottom:0;
+        padding-top:0;
         max-height: 7rem;
     }
 }
@@ -97,8 +111,14 @@ header {
 }
 
 .logo :hover{
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
     scale:1.1;
+}
+
+@media (max-width: 900px) {
+    .logo{
+        padding-bottom:10rem;
+    }
 }
 
 @media (max-width: 600px) {
@@ -107,15 +127,16 @@ header {
     }
 }
 
-.nav{
+.nav1{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 4rem;
     justify-items: center;
     align-items: center;
+    padding-left:3rem;
 }
 
-.nav a{
+.nav1 a{
     text-decoration: none;
     color:#296537;
     font-size: 40px;
@@ -123,24 +144,83 @@ header {
     margin: 0.5rem;
 }
 
-.nav a:hover{
+.nav1 a:hover{
     color:#91a140f8;
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
 }
 
 
 @media (max-width: 900px) {
-    .nav {
+    .nav1 {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(3,2rem);
+        gap:3rem;
+        padding-left:0;
     }
 }
 
 @media (max-width: 500px) {
-    .nav a{
+    .nav1 {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3,2rem);
+        gap:1rem;
+        padding:0;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav1 a{
        font-size: 35px;
     }
 }
+
+.nav2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+    padding-left:5rem;
+}
+
+.nav2 a{
+    text-decoration: none;
+    color:#296537;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 0.5rem;
+}
+
+.nav2 a:hover{
+    color:#91a140f8;
+    cursor:url('cursor2.svg'), auto;
+}
+
+
+@media (max-width: 900px) {
+    .nav2 {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3,2rem);
+        gap:3rem;
+        padding:0;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav2 {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3,2rem);
+        gap:1rem;
+        padding:0;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav2 a{
+       font-size: 35px;
+    }
+}
+
+
 
 .logo{
     height: 6rem;
@@ -160,8 +240,8 @@ a.insta img{
     height: 2rem;
 }
 
-a.insta:hover{
-    cursor:url('cursor2.png'), auto;
+insta img:hover{
+    cursor:url('cursor2.svg'), auto;
     scale:1,1;
 }
 
@@ -183,7 +263,7 @@ h1 a{
 
 h1 a:hover{
     color:#296537;
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
 }
 
 h2{
@@ -242,7 +322,7 @@ h3{
 
 .projet a:hover{
     color: #296537;
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
 
 }
 
@@ -261,10 +341,12 @@ h3{
 
 .years{
     display: grid;
-    max-width: 5rem;
+    max-width: 4rem;
     justify-content: center;
     align-items: center;
     max-height:28rem;
+    padding-top:1.8rem;
+    padding-bottom:1.8rem;
 }
 
 .year{
@@ -329,7 +411,7 @@ h3{
 .photo img:hover{
     transform: scale(1.1);
     background-color: #296537;
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
 }
 
 .colonnes {
@@ -337,6 +419,7 @@ h3{
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     gap: 1rem;
+    padding-bottom:2rem;
 }
 
 @media (max-width: 480px){
@@ -379,7 +462,6 @@ h3{
 .des {
     display: grid;
     max-width: auto; /* Largeur de la colonne */
-    max-height: 33rem; /* Hauteur visible de la colonne */
     border-radius: 15px;
     flex-direction: column;
     height:fit-content;
@@ -403,11 +485,17 @@ h3{
 }
 
 .video{
+    position:relative;
     width: 100%;
-    height: auto;
+    height:25rem;
     border-radius: 15px;
 }
 
+@media (max-width: 480px) {
+    .video {
+        height:8rem;
+    }
+}
 
 
 .about{
@@ -436,7 +524,7 @@ h3{
 }
 
 .sur a:hover{
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
     color:#296537;
 }
 
@@ -514,7 +602,7 @@ h3{
 
 .picture-a a:hover{
     transform: scale(2.2);
-    cursor:url('cursor2.png'), auto;
+    cursor:url('cursor2.svg'), auto;
 
 }
 
