--- a/style.css
+++ b/style.css
@@ -96,8 +96,9 @@ header {
 
 @media (max-width: 500px) {
     .header-container {
-        grid-template-columns: 1fr 0.1rem 1fr;
+        grid-template-columns: 0.5fr 0rem 0.5fr;
         padding-top:0;
+        padding-left:0;
         max-height: 7rem;
         gap:0;
     }
@@ -174,7 +175,7 @@ header {
 
 @media (max-width: 500px) {
     .nav1 a{
-       font-size: 35px;
+       font-size: 30px;
     }
 }
 
@@ -226,7 +227,7 @@ header {
 
 @media (max-width: 500px) {
     .nav2 a{
-       font-size: 35px;
+       font-size: 30px;
     }
 }
 
@@ -514,6 +515,12 @@ h3{
     padding:1.5rem;
     margin-left: 3.5rem;
     max-width:45rem;
+}
+
+@media (max-width: 500px) {
+    .about {
+        margin-left: 0;
+    }
 }
 
 .esad{
