--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .back{
-    height:100vh;
+    height:120vh;
     width: 100vw;
     background-image: url('logo.svg');
     background-position: right;
@@ -47,12 +47,14 @@ header {
     display:grid;
     top:0;
     padding: 1rem;
+    padding-top: 1.7rem;
+    padding-bottom: 3rem;
 }
 
 .header-container {
     display: grid;
     grid-template-columns:0.7fr 10rem 1fr;
-    gap: 8rem;
+    gap: 5rem;
     max-height:11rem;
     padding: 1rem;
     align-items: center;
@@ -62,14 +64,14 @@ header {
 @media (max-width: 1400px){
     .header-container{
         grid-template-columns: 1fr 10rem 1fr;
-        gap:6rem;
+        gap:4rem;
     }
 }
 
 @media (max-width: 1300px) {
     .header-container {
         grid-template-columns: 1fr 9rem 1fr;
-        gap: 5rem;
+        gap:4rem;
     }
 }
 
@@ -90,7 +92,7 @@ header {
 @media (max-width: 900px) {
     .header-container {
         grid-template-columns: 1fr 8rem 1fr;
-        gap: 1rem;
+        gap:0;
     }
 }
 
@@ -272,7 +274,7 @@ h2{
 h3{
     display: grid;
     font-weight:500;
-    padding-right:10px;
+    padding-right:7px;
 }
 
 
@@ -282,7 +284,7 @@ h3{
     padding: 2rem;
     padding-left: 1rem;
     padding-top:1rem;
-    max-height:1vw;
+    max-height:110vh;
 }
 
 @media (max-width: 480px) {
@@ -291,12 +293,11 @@ h3{
     }
 }
 
-
 .projet ul{
     display: flex;
     flex-direction: column;
     list-style-type: none;
-    min-width: 18rem;
+    min-width: 19rem;
     padding-left: 0;
     margin: 0;
 }
@@ -310,7 +311,7 @@ h3{
     align-items: center;
     text-decoration:none;
     color: black;
-    font-size: 18px;
+    font-size: 17px;
     min-height: 2rem;
     border-left: 4px solid #296537;
     padding-left:1rem;
@@ -345,7 +346,7 @@ h3{
     max-width: 4rem;
     justify-content: center;
     align-items: center;
-    max-height:28rem;
+    max-height:41rem;
     padding-top:1.8rem;
     padding-bottom:1.8rem;
 }
